--- a/config/west.yml
+++ b/config/west.yml
@@ -1,30 +1,15 @@
 manifest:
   remotes:
     - name: zmkfirmware
-      url-base: https://github.com/zmkfirmware
+      # url-base: https://github.com/zmkfirmware
+      url-base: https://github.com/petejohanson  # 添加鼠标的修订
     # Additional modules containing boards/shields/custom code can be listed here as well
     # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
-    # 这里是添加dongle-display，https://github.com/englmaxi/zmk-dongle-display
-    # - name: englmaxi
-    #   url-base: https://github.com/englmaxi
-    # - name: kawvin
-    #   url-base: https://github.com/kawvin
-    # - name: GarrettFaucher
-    #   url-base: https://github.com/GarrettFaucher
   projects:
     - name: zmk
       remote: zmkfirmware
-      revision: main
+      # revision: main
+      revision: feat/pointers-move-scroll  # 添加鼠标的修订
       import: app/west.yml
-    # 这里是添加dongle-display，https://github.com/englmaxi/zmk-dongle-display
-    # - name: zmk-dongle-display
-    #   remote: englmaxi
-    #   revision: main
-    # - name: zmk-dongle-display-091-drum
-    #   remote: kawvin
-    #   revision: main
-    # - name: zmk-dongle-display-091-oled
-    #   remote: GarrettFaucher
-    #   revision: main
   self:
     path: config
