ky89无灯外发版本

--- a/config/ky89.conf
+++ b/config/ky89.conf
@@ -6,9 +6,9 @@ CONFIG_BT_MAX_PAIRED=6
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=1
 
 #最大按键数量，全键无冲
-# CONFIG_ZMK_COMBO_MAX_PRESSED_COMBOS=7
-# CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=7
-# CONFIG_ZMK_USB_LOGGING=y
+CONFIG_ZMK_COMBO_MAX_PRESSED_COMBOS=7
+CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=7
+CONFIG_ZMK_USB_LOGGING=y
 
 # 是否开启蓝牙链接密码
 # CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
@@ -36,8 +36,7 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # 更改键盘默认显示名称
-# CONFIG_ZMK_KEYBOARD_NAME="Kawvin_Split89"
-# CONFIG_ZMK_MOUSE=y
+# CONFIG_ZMK_KEYBOARD_NAME="Ky89"
 
 # 启用旋钮
 CONFIG_EC11=y
@@ -48,6 +47,9 @@ CONFIG_ZMK_DISPLAY=y
 
 # 外部电源
 CONFIG_ZMK_EXT_POWER=y
+
+# MOUSE
+CONFIG_ZMK_MOUSE=y
 
 # # 启用RGB
 # CONFIG_ZMK_RGB_UNDERGLOW=y
